// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
    invalid:
invalid:
---



<html><head></head><body></body></html>

=====================================output=====================================
---
    invalid:
invalid:
---

<html>
  <head></head>
  <body></body>
</html>

================================================================================
`;

exports[`yaml.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
hello:     world
---






<html><head></head><body></body></html>

=====================================output=====================================
---
hello: world
---

<html>
  <head></head>
  <body></body>
</html>

================================================================================
`;
